<GridLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:columnCount="2"
    android:orientation="horizontal"
    android:padding="@dimen/textview_padding"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context="com.deitel.tipcalculator.MainActivity" >

    <TextView
        android:id="@+id/amountTextView"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:labelFor="@id/amountEditText"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/customPercentTextView"
        android:layout_column="0"
        android:layout_gravity="left"
        android:layout_row="1"
        android:text="@string/custom_tip_percentage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/amountDisplayView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="top|left|fill_horizontal"
        android:layout_row="0"
        android:background="@android:color/holo_blue_bright"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/customTipSeekBar"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="right|center_vertical"
        android:layout_row="1"
        android:max="@integer/bar"
        android:progress="@integer/prog" />

    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="2" >

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fifteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/eighteen_percent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="256dp"
        android:layout_height="24dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="@integer/m_length" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/tipLinearLayout"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="@integer/tip_row" >

        <TextView
            android:id="@+id/tip15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="4"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_column="1"
        android:layout_gravity="left|center_vertical"
        android:layout_row="4" >

        <TextView
            android:id="@+id/total15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</GridLayout>